k8s-rewrite/charts/homepage/service.yaml
# Homepage Service
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  selector:
    app: homepage
